--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root{
 	--main-background: #0b0c0f;
 	--main-fonts-color: #fff;
-	--main-decor-color: #ff9d00;
+	--main-decor-color: #00ccff;
     --main-header-background: #21252e;
 	--main-font-family: 'Poppins', sans-serif;
 }
@@ -131,6 +131,7 @@ a.nav-link{
 	font-style: normal;
 	font-size: 45px;
 	color: var(--main-fonts-color);
+        text-shadow: 0px 0px 40px var(--main-decor-color);
 /*
   -ms-user-select: none;
   -webkit-user-select: none;
