--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ a.nav-link{
 	color: var(--main-fonts-color);
         text-shadow: 0px 0px 40px var(--main-decor-color);
 
-.opium{
+a.opium{
         color: var(--main-fonts-color);
 	font-family: var(--main-font-family);
 	cursor: pointer;
