--- a/style.css
+++ b/style.css
@@ -134,10 +134,7 @@ a.nav-link{
         text-shadow: 0px 0px 40px var(--main-decor-color);
 
 a.opium{
-        color: var(--main-fonts-color);
-	font-family: var(--main-font-family);
-	cursor: pointer;
-	text-transform: uppercase;
+        color: inherit;
 }
 	 
 /*
